--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An AI Discord bot",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "colors": "^1.4.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "openai": "^4.17.5"
   }
 }
