--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "colors": "^1.4.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "openai": "^4.17.5"
   }
