--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/clxrityy/aiccord#readme",
   "dependencies": {
+    "axios": "^1.6.2",
     "colors": "^1.4.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "openai": "^4.17.5"
