--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "openai": "^4.17.5"
